Fixed the spacing between the 'Read more' button and the Projects grid

--- a/src/sass/layouts/_home.scss
+++ b/src/sass/layouts/_home.scss
@@ -28,7 +28,7 @@
   }
 }
 
-// Projects Grid
+// Projects Section
 .projects-section {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  gap: 10%;
 
   .see-more {
     margin-top: 2.5rem;
